feat: refactor asynchronous operations to use RxJava Completable for improved readability and performance